--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-less": "^4.0.1",
     "gulp-minify": "^3.1.0",
     "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-uglify": "^3.0.2",
+    "typescript": "^3.7.2"
   }
 }
